--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,10 +2,10 @@
 name: Metrics
 on:
   # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
+  schedule: [{ cron: "0 * * * *" }]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push: { branches: ["master", "main"] }
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -28,10 +28,10 @@ jobs:
           token: ${{ secrets.GH_PAT }}
 
           # Options
-          user: ChrisTitusTech
+          user: mranv
           template: classic
           base: header, activity, community, repositories, metadata
-          config_timezone: America/Chicago
+          config_timezone: Asia/Kolkata
           plugin_gists: yes
           plugin_habits: yes
           plugin_habits_charts_type: classic
