--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -33,10 +33,10 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Kolkata
           plugin_achievements: yes
-          plugin_achievements_display: classic
+          plugin_achievements_display: compact
           plugin_achievements_threshold: X
           plugin_code: yes
-          plugin_code_languages: yes
+          plugin_code_languages: javascript, typescript
           plugin_code_load: 400
           plugin_gists: yes
           plugin_habits: yes
@@ -47,6 +47,7 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_languages: yes
+          plugin_languages_indepth: yes
           commits_authoring: Anubhav Gain, mranv, mranv@users.noreply.github.com
           plugin_lines: yes
           plugin_lines_history_limit: 1
