--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -47,7 +47,9 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_languages: yes
-          plugin_languages_indepth: yes
+          plugin_languages_sections: recently-used
+          plugin_languages_recent_load: 400
+          plugin_languages_recent_days: 14
           commits_authoring: Anubhav Gain, mranv, mranv@users.noreply.github.com
           plugin_lines: yes
           plugin_lines_history_limit: 1
