--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -28,7 +28,7 @@ jobs:
           plugin_achievements_display: compact
           plugin_achievements_threshold: X
           plugin_code: yes
-          plugin_code_languages: javascript, typescript
+          plugin_code_languages: javascript, typescript, rust
           plugin_code_load: 400
           plugin_gists: yes
           plugin_habits: yes
